# rem0te

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  version.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  feedback.md
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts  security.controller.ts  security.service.ts  update.controller.ts  update.service.ts
apps/api/src/audit/: audit.controller.ts  audit.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/config/: configuration.ts
apps/api/src/customers/: customers.controller.ts  customers.module.ts  customers.service.ts
apps/api/src/dashboard/: dashboard.controller.ts  dashboard.service.ts
apps/launcher/: index.html  package.json
apps/launcher/src/: App.tsx  index.css
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/src/: launch.rs  lib.rs  main.rs
apps/web/: middleware.ts  next.config.js  package.json
apps/web/app/: layout.tsx
apps/web/hooks/: use-toast.ts
apps/web/lib/: api-client-extensions.ts  api-client.ts  auth.ts  theme-provider.tsx  utils.ts
deploy/caddy/: Caddyfile
deploy/scripts/: install.sh  setup-db.sh
deploy/systemd/: reboot-remote-api.service  reboot-remote-web.service
docs/: setup.md
semgrep-rules/: nodejs-security.yml
tools/windows-installer/: go.mod  main.go
(+81 files in other folders)
