[package]
name = "reboot-remote-launcher"
version = "0.1.0"
description = "Reboot Remote Launcher — handles reboot-remote:// deep links"
authors = ["Reboot Remote"]
edition = "2021"

[lib]
name = "reboot_remote_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
url = "2"
form_urlencoded = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
